update on git ignore and explorer.php

--- a/.gitignore
+++ b/.gitignore
@@ -309,3 +309,78 @@ htmls/documents/SIA-MARN/INCENDIOS FORESTALES/Amenazas de Incendio-Septiembre.pd
 htmls/documents/SIA-MARN/INCENDIOS FORESTALES/Evitemos los incendios forestales.JPG
 htmls/documents/SIA-MARN/INCENDIOS FORESTALES/Thumbs.db
 htmls/documents/SIA-MARN/Thumbs.db
+htmls/documents/PACTO AMBIENTAL CC RS BOSQUE AGUA/Pacto Ambiental 2016-2020.pdf
+htmls/documents/PACTO AMBIENTAL CC RS BOSQUE AGUA/Pacto Ambiental 2016-2020.pdf.png
+htmls/documents/PACTO AMBIENTAL CC RS BOSQUE AGUA/PACTO AMBIENTAL CC RS BOSQUE AGUA/Pacto Ambiental 2016-2020.pdf
+htmls/documents/PACTO AMBIENTAL CC RS BOSQUE AGUA/PACTO AMBIENTAL CC RS BOSQUE AGUA/Pacto Ambiental 2016-2020.pdf.png
+htmls/documents/PACTO AMBIENTAL CC RS BOSQUE AGUA/PARTICIPACIÓN CIUDADANA/b37-28.01.13 Jornada de Limpieza Amatitlán.JPG
+htmls/documents/PACTO AMBIENTAL CC RS BOSQUE AGUA/PARTICIPACIÓN CIUDADANA/b37-28.01.13 Jornada de Limpieza Amatitlán.pdf.png
+htmls/documents/PACTO AMBIENTAL CC RS BOSQUE AGUA/PARTICIPACIÓN CIUDADANA/b39-Lanzamiento Ferias Ambientales.JPG
+htmls/documents/PACTO AMBIENTAL CC RS BOSQUE AGUA/PARTICIPACIÓN CIUDADANA/b39-Lanzamiento Ferias Ambientales.pdf.png
+htmls/documents/PACTO AMBIENTAL CC RS BOSQUE AGUA/PARTICIPACIÓN CIUDADANA/Thumbs.db
+htmls/documents/PACTO AMBIENTAL CC RS BOSQUE AGUA/PARTICIPACIÓN CIUDADANA/Trifoliares Fopas Participación Ciudadana.pdf
+htmls/documents/PACTO AMBIENTAL CC RS BOSQUE AGUA/PARTICIPACIÓN CIUDADANA/Trifoliares Fopas Participación Ciudadana.pdf.png
+htmls/documents/PARTICIPACIÓN CIUDADANA/b37-28.01.13 Jornada de Limpieza Amatitlán.JPG
+htmls/documents/PARTICIPACIÓN CIUDADANA/b37-28.01.13 Jornada de Limpieza Amatitlán.pdf.png
+htmls/documents/PARTICIPACIÓN CIUDADANA/b39-Lanzamiento Ferias Ambientales.JPG
+htmls/documents/PARTICIPACIÓN CIUDADANA/b39-Lanzamiento Ferias Ambientales.jpg.png
+htmls/documents/PARTICIPACIÓN CIUDADANA/Thumbs.db
+htmls/documents/PARTICIPACIÓN CIUDADANA/Trifoliares Fopas Participación Ciudadana.pdf
+htmls/documents/PARTICIPACIÓN CIUDADANA/Trifoliares Fopas Participación Ciudadana.pdf.png
+htmls/documents/PLAGUICIDAS/INFANTIL/Los Plaguicidas y los niños, 2006.pdf
+htmls/documents/PLAGUICIDAS/INFANTIL/Los Plaguicidas y los niños, 2006.pdf.png
+htmls/documents/PLAN NACIONAL DE DESARROLLO K_atun Nuestra Guatemala 2032/GuatemalaPlanNacionaldeDesarrollo2032.pdf
+htmls/documents/PLAN NACIONAL DE DESARROLLO K_atun Nuestra Guatemala 2032/GuatemalaPlanNacionaldeDesarrollo2032.pdf.png
+htmls/documents/PLANES DE DESARROLLO/PDM_501_2.pdf
+htmls/documents/PLANES DE DESARROLLO/PDM_501_2.pdf.png
+htmls/documents/POLITICAS AMBIENTALES/14. Politica Desarrollo Rural Integral.pdf
+htmls/documents/POLITICAS AMBIENTALES/14. Politica Desarrollo Rural Integral.pdf.png
+htmls/documents/POLITICAS AMBIENTALES/ANACAFÉ/Política de Ambiente y Cambio Climático sector Café Guatemala.pdf
+htmls/documents/POLITICAS AMBIENTALES/ANACAFÉ/Política de Ambiente y Cambio Climático sector Café Guatemala.pdf.png
+htmls/documents/POLITICAS AMBIENTALES/Politica Nacional de Educación Ambiental.pdf
+htmls/documents/POLITICAS AMBIENTALES/Politica Nacional de Educación Ambiental.pdf.png
+htmls/documents/POLITICAS AMBIENTALES/Politica Nacional de Producción Más Limpia.pdf
+htmls/documents/POLITICAS AMBIENTALES/Politica Nacional de Producción Más Limpia.pdf.png
+htmls/documents/POLITICAS AMBIENTALES/POLITICAS ANTERIORES REFERENCIA/7. Política Manejo Integral de los Residuos y DesechosSolidos.pdf
+htmls/documents/POLITICAS AMBIENTALES/POLITICAS ANTERIORES REFERENCIA/7. Política Manejo Integral de los Residuos y DesechosSolidos.pdf.png
+htmls/documents/POLITICAS AMBIENTALES/POLITICAS ANTERIORES REFERENCIA/Política de Equidad de Género en el Sector de La Gestión Ambiental y su Plan de Acción 2003-2008.pdf
+htmls/documents/POLITICAS AMBIENTALES/POLITICAS ANTERIORES REFERENCIA/Política de Equidad de Género en el Sector de La Gestión Ambiental y su Plan de Acción 2003-2008.pdf.png
+htmls/documents/POLITICAS AMBIENTALES/POLITICAS ANTERIORES REFERENCIA/Política Nacional de Educación Ambiental.pdf
+htmls/documents/POLITICAS AMBIENTALES/POLITICAS ANTERIORES REFERENCIA/Política Nacional de Educación Ambiental.pdf.png
+htmls/documents/POLITICAS AMBIENTALES/POLITICAS ANTERIORES REFERENCIA/Política Nacional del Agua de Guatemala.pdf
+htmls/documents/POLITICAS AMBIENTALES/POLITICAS ANTERIORES REFERENCIA/Política Nacional del Agua de Guatemala.pdf.png
+htmls/documents/POLITICAS AMBIENTALES/Política de Conservación, Protección y Mejoramiento de Ambiente y Recursos Naturales 2007.pdf
+htmls/documents/POLITICAS AMBIENTALES/Política de Conservación, Protección y Mejoramiento de Ambiente y Recursos Naturales 2007.pdf.png
+htmls/documents/POLITICAS AMBIENTALES/Política Marco de Gestion Ambiental.pdf
+htmls/documents/POLITICAS AMBIENTALES/Política Marco de Gestion Ambiental.pdf.png
+htmls/documents/POLITICAS AMBIENTALES/Política Nacional de Cambio Climático Guatemala2009.pdf
+htmls/documents/POLITICAS AMBIENTALES/Política Nacional de Cambio Climático Guatemala2009.pdf.png
+htmls/documents/POLITICAS AMBIENTALES/Política para el Manejo Integral de las Zonas Marino Costeras de Guatemala.pdf
+htmls/documents/POLITICAS AMBIENTALES/Política para el Manejo Integral de las Zonas Marino Costeras de Guatemala.pdf.png
+htmls/documents/POLITICAS AMBIENTALES/Política para la Desconcentración y Descentralización de la Gestión Ambiental en Guatemala.pdf
+htmls/documents/POLITICAS AMBIENTALES/Política para la Desconcentración y Descentralización de la Gestión Ambiental en Guatemala.pdf.png
+htmls/documents/POLITICAS AMBIENTALES/Políticas Ambientales  Vigentes/13. Política de Producción Más Limpia.pdf
+htmls/documents/POLITICAS AMBIENTALES/Políticas Ambientales  Vigentes/13. Política de Producción Más Limpia.pdf.png
+htmls/documents/POLITICAS AMBIENTALES/Políticas Ambientales  Vigentes/3. Politica de Humedales de Guatemala.pdf
+htmls/documents/POLITICAS AMBIENTALES/Políticas Ambientales  Vigentes/3. Politica de Humedales de Guatemala.pdf.png
+htmls/documents/POLITICAS AMBIENTALES/Políticas Ambientales  Vigentes/9. Politica Marino Costera.pdf
+htmls/documents/POLITICAS AMBIENTALES/Políticas Ambientales  Vigentes/9. Politica Marino Costera.pdf.png
+htmls/documents/POLITICAS AMBIENTALES/Políticas Ambientales  Vigentes/MARN Politica ambiental de genero.pdf
+htmls/documents/POLITICAS AMBIENTALES/Políticas Ambientales  Vigentes/MARN Politica ambiental de genero.pdf.png
+htmls/documents/POLITICAS AMBIENTALES/Políticas Ambientales  Vigentes/POLITICA NAC. EDU. AMBIENTAL.PDF
+htmls/documents/POLITICAS AMBIENTALES/Políticas Ambientales  Vigentes/POLITICA NAC. EDU. AMBIENTAL.pdf.png
+htmls/documents/POLITICAS AMBIENTALES/Políticas Ambientales  Vigentes/Política de Conservación, Protección y Mejoramiento de Ambiente y Recursos Naturales 2007.pdf
+htmls/documents/POLITICAS AMBIENTALES/Políticas Ambientales  Vigentes/Política de Conservación, Protección y Mejoramiento de Ambiente y Recursos Naturales 2007.pdf.png
+htmls/documents/POLITICAS AMBIENTALES/Políticas Ambientales  Vigentes/Política Marco de Gestion Ambiental.pdf
+htmls/documents/POLITICAS AMBIENTALES/Políticas Ambientales  Vigentes/Política Marco de Gestion Ambiental.pdf.png
+htmls/documents/POLITICAS AMBIENTALES/Políticas Ambientales  Vigentes/Política Nac. de Productos Químicos y Desechos Peligrosos en Guatemala.pdf
+htmls/documents/POLITICAS AMBIENTALES/Políticas Ambientales  Vigentes/Política Nac. de Productos Químicos y Desechos Peligrosos en Guatemala.pdf.png
+htmls/documents/POLITICAS AMBIENTALES/Políticas Ambientales  Vigentes/Política Nacional para la Gestión Integral de Residuos y Desechos Sólidos..pdf
+htmls/documents/POLITICAS AMBIENTALES/Políticas Ambientales  Vigentes/Política Nacional para la Gestión Integral de Residuos y Desechos Sólidos..pdf.png
+htmls/documents/POLITICAS AMBIENTALES/Políticas Ambientales  Vigentes/Política para la Desconcentración y Descentralización de la Gestión Ambiental en Guatemala.pdf
+htmls/documents/POLITICAS AMBIENTALES/Políticas Ambientales  Vigentes/Política para la Desconcentración y Descentralización de la Gestión Ambiental en Guatemala.pdf.png
+htmls/documents/POLITICAS AMBIENTALES/Políticas Ambientales  Vigentes/Política_CC_2014.pdf
+htmls/documents/POLITICAS AMBIENTALES/Políticas Ambientales  Vigentes/Política_CC_2014.pdf.png
+htmls/documents/POLITICAS AMBIENTALES/Thumbs.db
+htmls/documents/POLITICAS AMBIENTALES/USAC/Politica-Ambiental-de-la-USAC.pdf
+htmls/documents/POLITICAS AMBIENTALES/USAC/Politica-Ambiental-de-la-USAC.pdf.png
