--- a/.gitignore
+++ b/.gitignore
@@ -384,3 +384,58 @@ htmls/documents/POLITICAS AMBIENTALES/Políticas Ambientales  Vigentes/Política
 htmls/documents/POLITICAS AMBIENTALES/Thumbs.db
 htmls/documents/POLITICAS AMBIENTALES/USAC/Politica-Ambiental-de-la-USAC.pdf
 htmls/documents/POLITICAS AMBIENTALES/USAC/Politica-Ambiental-de-la-USAC.pdf.png
+htmls/documents/PACTO AMBIENTAL CC RS BOSQUE AGUA - Copy/PARTICIPACIÓN CIUDADANA/Trifoliares Fopas Participación Ciudadana.pdf.png
+htmls/documents/PACTO AMBIENTAL CC RS BOSQUE AGUA - Copy/PARTICIPACIÓN CIUDADANA/Trifoliares Fopas Participación Ciudadana.pdf
+htmls/documents/PACTO AMBIENTAL CC RS BOSQUE AGUA - Copy/PARTICIPACIÓN CIUDADANA/Thumbs.db
+htmls/documents/PACTO AMBIENTAL CC RS BOSQUE AGUA - Copy/PARTICIPACIÓN CIUDADANA/b39-Lanzamiento Ferias Ambientales.pdf.png
+htmls/documents/PACTO AMBIENTAL CC RS BOSQUE AGUA - Copy/PARTICIPACIÓN CIUDADANA/b39-Lanzamiento Ferias Ambientales.JPG
+htmls/documents/PACTO AMBIENTAL CC RS BOSQUE AGUA - Copy/PARTICIPACIÓN CIUDADANA/b37-28.01.13 Jornada de Limpieza Amatitlán.pdf.png
+htmls/documents/PACTO AMBIENTAL CC RS BOSQUE AGUA - Copy/Pacto Ambiental 2016-2020.pdf
+htmls/documents/PACTO AMBIENTAL CC RS BOSQUE AGUA - Copy/Pacto Ambiental 2016-2020.pdf.png
+htmls/documents/PACTO AMBIENTAL CC RS BOSQUE AGUA - Copy/PACTO AMBIENTAL CC RS BOSQUE AGUA/Pacto Ambiental 2016-2020.pdf
+htmls/documents/PACTO AMBIENTAL CC RS BOSQUE AGUA - Copy/PACTO AMBIENTAL CC RS BOSQUE AGUA/Pacto Ambiental 2016-2020.pdf.png
+htmls/documents/PACTO AMBIENTAL CC RS BOSQUE AGUA - Copy/PARTICIPACIÓN CIUDADANA/b37-28.01.13 Jornada de Limpieza Amatitlán.JPG
+htmls/documents/AGUAS RESIDUALES - Copy/ag-129-2015.pdf
+htmls/documents/AGUAS RESIDUALES - Copy/ag-129-2015.png
+htmls/documents/AGUAS RESIDUALES - Copy/AG-138-2017-1.pdf
+htmls/documents/AGUAS RESIDUALES - Copy/AG-138-2017-1.png
+htmls/documents/AGUAS RESIDUALES - Copy/AG-254-2019 Reformas REG.AGUASRES..pdf
+htmls/documents/AGUAS RESIDUALES - Copy/AG-254-2019 Reformas REG.AGUASRES..png
+htmls/documents/AGUAS RESIDUALES - Copy/AG_12_2011.pdf
+htmls/documents/AGUAS RESIDUALES - Copy/AG_12_2011.png
+htmls/documents/AGUAS RESIDUALES - Copy/ANEXO_3_Acuerdo-gubernativo-12-2011-Reglamento-descargas-lago-Atitlan.pdf
+htmls/documents/AGUAS RESIDUALES - Copy/ANEXO_3_Acuerdo-gubernativo-12-2011-Reglamento-descargas-lago-Atitlan.png
+htmls/documents/AGUAS RESIDUALES - Copy/Reglamento Aguas Residuales.pdf
+htmls/documents/AGUAS RESIDUALES - Copy/Reglamento Aguas Residuales.png
+htmls/documents/AGUAS RESIDUALES/Acuerdo Gubernativo 110-2016.pdf
+htmls/documents/AGUAS RESIDUALES/Acuerdo Gubernativo 110-2016.png
+htmls/documents/AGUAS RESIDUALES/Acuerdo Ministerial 8-2016.  Plantas de Tratamiento de Aguas Residuales. Ministerio de Salud.pdf
+htmls/documents/AGUAS RESIDUALES/Acuerdo Ministerial 8-2016.  Plantas de Tratamiento de Aguas Residuales. Ministerio de Salud.png
+htmls/documents/AGUAS RESIDUALES/ag-129-2015.pdf
+htmls/documents/AGUAS RESIDUALES/ag-129-2015.png
+htmls/documents/AGUAS RESIDUALES/AG-138-2017-1.pdf
+htmls/documents/AGUAS RESIDUALES/AG-138-2017-1.png
+htmls/documents/AGUAS RESIDUALES/AG-254-2019 Reformas REG.AGUASRES..pdf
+htmls/documents/AGUAS RESIDUALES/AG-254-2019 Reformas REG.AGUASRES..png
+htmls/documents/AGUAS RESIDUALES/AG_12_2011.pdf
+htmls/documents/AGUAS RESIDUALES/AG_12_2011.png
+htmls/documents/AGUAS RESIDUALES/ANEXO_3_Acuerdo-gubernativo-12-2011-Reglamento-descargas-lago-Atitlan.pdf
+htmls/documents/AGUAS RESIDUALES/ANEXO_3_Acuerdo-gubernativo-12-2011-Reglamento-descargas-lago-Atitlan.png
+htmls/documents/AGUAS RESIDUALES/Reglamento Aguas Residuales.pdf
+htmls/documents/AGUAS RESIDUALES/Reglamento Aguas Residuales.png
+htmls/documents/AIRE - Copy/39_INFORME_LMA_2009 USAC.pdf
+htmls/documents/AIRE - Copy/39_INFORME_LMA_2009 USAC.png
+htmls/documents/AIRE - Copy/Acuerdo Gubernativo No. 14-97 vehículos automotores.pdf
+htmls/documents/AIRE - Copy/Acuerdo Gubernativo No. 14-97 vehículos automotores.png
+htmls/documents/AIRE - Copy/Contaminación del Aire/Contaminación del Aire, LIMUSA.pdf
+htmls/documents/AIRE - Copy/Contaminación del Aire/Contaminación del Aire, LIMUSA.png
+htmls/documents/AIRE - Copy/Entre todos podemos salvar La Capa de Ozono.pdf
+htmls/documents/AIRE - Copy/Entre todos podemos salvar La Capa de Ozono.png
+htmls/documents/AIRE - Copy/Fuentes Móviles en Guatemala/Informe nacional.pdf
+htmls/documents/AIRE - Copy/Fuentes Móviles en Guatemala/Informe nacional.png
+htmls/documents/AIRE - Copy/Monitoreo del Aire en la Ciudad de Guatemala, 2011.pdf
+htmls/documents/AIRE - Copy/Monitoreo del Aire en la Ciudad de Guatemala, 2011.png
+htmls/documents/AIRE - Copy/Primer_informe_Monitoreo_Deptal_2013_Final.pdf
+htmls/documents/AIRE - Copy/Primer_informe_Monitoreo_Deptal_2013_Final.png
+htmls/documents/AIRE - Copy/Toolkit de Combustibres y Vehículos Limpios.PDF, Canadá.pdf
+htmls/documents/AIRE - Copy/Toolkit de Combustibres y Vehículos Limpios.PDF, Canadá.png
